# swf-epicprod

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE_MAP.md  CAMPAIGN_FAMILY.md  DEVCLOUD_SUCCESSION.md  EPICPROD_ASSESSMENTS.md  EPICPROD_ASSESSMENTS_V1.md  EPICPROD_DASHBOARD.md  EPICPROD_DATA_LINEAGE.md  EPICPROD_EVGEN_INPUTS.md  EPICPROD_LLM_OPERATIONS.md  EPICPROD_NARRATIVES.md  EPICPROD_OPS.md  EPICPROD_OPS_AGENT.md  EPICPROD_QUESTIONNAIRE.md  EPICPROD_SUCCESSION.md  EPICPROD_TASK_CATALOG.md  EPICPROD_VALIDATION.md  JEDI_INTEGRATION.md  PANDA_USER_JOBS.md  PCS.md
docs/tools/: generate_pcs_model_diagram.py
pcs/: api_urls.py  api_views.py  dashboard.py  definitions_sweep.py  models.py  name_tokens.py  physics_config.py  reconcile.py  services.py  urls.py  views.py
pcs/migrations/: 0001_initial.py
pcs/templates/pcs/: _task_compose_list.html  _task_list_filter.html  dashboard.html  dashboard_panel_entries.html  edition_data.html  pcs_catalog.html  request_composer.html
scripts/: assessment-trigger.py  backfill_panda_executed.py  create_standard_prodconfig.py  migrate_campaign_families.py  migrate_output_ownership.py  migrate_placeholder_prodconfig.py
swf_epicprod/: __init__.py  ai_subjects.py  credential_check.py
swf_epicprod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swf_epicprod/analytics/: __init__.py  members.py  rollup.py
swf_epicprod/assessment/: __init__.py  bootstrap.py  bundle.py  enforce.py  freshness.py  reporting.py  spec.py  trigger.py
swf_epicprod/mcp_tools/: __init__.py  status.py
